# slurmexec

./: LICENSE  README.md  pyproject.toml
examples/: README.md
examples/01_basic_example/: README.md  main.py
examples/02_custom_argparse/: main.py
src/slurmexec/: __init__.py  base.py  util.py  utils.py
tests/: test_bool_arg.py
